WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82807
styleForElement() should use enums instead of bools so we can all understand what it's doing
https://bugs.webkit.org/show_bug.cgi?id=82807
Summary
styleForElement() should use enums instead of bools so we can all understand ...
Eric Seidel (no email)
Reported
2012-03-30 16:54:52 PDT
styleForElement() should use enums instead of bools so we can all understand what it's doing
Attachments
Patch
(12.23 KB, patch)
2012-03-30 17:01 PDT
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
Patch for landing
(12.45 KB, patch)
2012-03-30 17:05 PDT
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
Patch for landing
(12.22 KB, patch)
2012-03-30 18:55 PDT
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2012-03-30 17:01:12 PDT
Created
attachment 134915
[details]
Patch
Adam Barth
Comment 2
2012-03-30 17:03:46 PDT
Comment on
attachment 134915
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=134915&action=review
> Source/WebCore/rendering/RenderObject.cpp:2548 > + /// FIXME: This "find nearest element parent" should be a helper function.
///////////////////
WebKit Review Bot
Comment 3
2012-03-30 17:04:47 PDT
Attachment 134915
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/css/CSSStyleSelector.cpp:1570: Local variables should never be PassRefPtr (see
http://webkit.org/coding/RefPtr.html
). [readability/pass_ptr] [5] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Seidel (no email)
Comment 4
2012-03-30 17:05:25 PDT
Created
attachment 134916
[details]
Patch for landing
WebKit Review Bot
Comment 5
2012-03-30 17:54:16 PDT
Comment on
attachment 134916
[details]
Patch for landing Rejecting
attachment 134916
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: eSelector.h patching file Source/WebCore/css/MediaQueryMatcher.cpp patching file Source/WebCore/css/StyleMedia.cpp patching file Source/WebCore/dom/Element.cpp patching file Source/WebCore/rendering/RenderObject.cpp Hunk #1 succeeded at 2560 (offset 15 lines). patching file Source/WebCore/rendering/RenderRegion.cpp patching file Source/WebCore/svg/SVGElement.cpp Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue/ Full output:
http://queues.webkit.org/results/12267531
Eric Seidel (no email)
Comment 6
2012-03-30 18:55:25 PDT
Created
attachment 134928
[details]
Patch for landing
WebKit Review Bot
Comment 7
2012-03-30 18:57:06 PDT
Attachment 134928
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/css/CSSStyleSelector.cpp:1570: Local variables should never be PassRefPtr (see
http://webkit.org/coding/RefPtr.html
). [readability/pass_ptr] [5] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 8
2012-03-30 19:46:26 PDT
Comment on
attachment 134928
[details]
Patch for landing Clearing flags on attachment: 134928 Committed
r112765
: <
http://trac.webkit.org/changeset/112765
>
WebKit Review Bot
Comment 9
2012-03-30 19:46:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug